--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Welcome to the TranquilMind</h1>
+        <h1>TranquilMind</h1>
     </div>
 
     
